# leksah1

./: README.md
leksah-dummy/: leksah-dummy.cabal
leksah-dummy/src/Leksah/: Dummy.hs
leksah-main/: leksah-main.cabal
leksah-main/data/plugins/: Default.prefs  billeksah-forms-1.0.0.lkshp  billeksah-pane-1.0.0.lkshp  leksah-dummy-1.0.0.lkshp  leksah-dummy-1.0.lkshp  leksah-main-1.0.0.lkshp  leksah-plugin-pane-1.0.0.lkshp  leksah.lkshc
leksah-main/src/: Leksah.hs
leksah-main/src/Graphics/: MyMissingGtk.hs
leksah-plugin-pane/: leksah-plugin-pane.cabal
leksah-plugin-pane/src/Panes/: Plugin.hs  PluginConfig.hs
leksah-sourceview/: leksah-sourceview.cabal
leksah-sourceview/src/Plugin/: LeksahSourceview.hs
leksah-sourceview/src/Text/: TextEditor.hs
leksah-textedit/: leksah-textedit.cabal
leksah-textedit-interface/: leksah-textedit-interface.cabal
leksah-textedit-interface/src/Plugin/: LeksahTexteditInterface.hs
leksah-textedit-interface/src/Text/: BufferModeInterface.hs  TextEditorInterface.hs
leksah-textedit/src/Graphics/Pane/: TextEditor.hs
leksah-textedit/src/Plugin/: TextEditor.hs
